--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ Prefabs/MonsterWaves0518.prefab.meta
 Prefabs/MonsterWaves0518.prefab
 Map_inMonWave0518.prefab.meta
 Map_inMonWave0518.prefab
+Scene/JJTT.unity
+Scene/JJTT.unity.meta
