--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ Map_inMonWave0518.prefab.meta
 Map_inMonWave0518.prefab
 Scene/JJTT.unity
 Scene/JJTT.unity.meta
+StreamingAssets/Master Bank.strings.bank.meta
+StreamingAssets/Master Bank.bank
+FMODStudioCache.asset
+StreamingAssets/Master Bank.bank.meta
